2020-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* config/config.sub: Update to latest config.sub

	* config/config.guess: Update to latest config.guess.

	* Makefile.am: Update to Automake 1.16.2

2020-04-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/dpx.c (ReadRowSamples): Simplify 10-bit packed decoding.
	(WriteRowSamples): Simplify 10-bit packed encoding.

	* coders/locale.c (ReadConfigureFile): Ignore comment element if
	it was not found or is too short.

	* magick/pixel_cache.c (ReadCacheIndexes): If SetNexus() has
	previously failed to allocate the staging buffer and thus reported
	an exception to the user, then ReadCacheIndexes() should report an
	error rather than blundering into copying indexes data to a null
	pointer.

	* magick/effect.c (AdaptiveThresholdImage): Assure that we don't
	attempt to write to output pixels if they have not been selected
	yet.

	* magick/utility.c (ExpandFilenames): Properly handle NULL
	filelist and NULL filelist entries.
	(GetGeometry): Assure that there is no one-character stack read
	overflow when reading the geometry buffer.

2020-03-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Restore xz to oss-fuzz build due to
	build problems getting worked out.

2020-03-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh (MAGICK_LIBS): Remove mention of
	liblzma.a in the oss-fuzz build until its build problems get
	worked out.

2020-03-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Skip building xz in the oss-fuzz
	build until its build problems get worked out.

2020-03-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (InitializeLogInfoPost): Don't load log.mgk if
	logging is already configured to use MethodOutput.

2020-03-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (InitializeLogInfoPost): Mark that logging is