@@ -38,6 +38,8 @@
 <p>2020-04-17  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/fits.c (InsertRowHDU): Fix scary-sounding GCC 10 warning,
+which is actually benign.</li>
 <li>config/config.sub: Update to latest config.sub</li>
 <li>config/config.guess: Update to latest config.guess.</li>
 <li>Makefile.am: Update to Automake 1.16.2</li>
